# GRAFIKAAAA

Grafhazi3/: CMakeLists.txt  Skeleton.cpp  buildrun.sh
